correct visibility options

--- a/src/components/options/Options.module.css
+++ b/src/components/options/Options.module.css
@@ -1,9 +1,23 @@
-.options {
+.mobile-options {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   @media screen and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: flex-end;
+
+    padding-right: 50px;
+
+    width: 100%;
+  }
+}
+
+.main-options {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
     flex-direction: row;
     justify-content: flex-end;
 
